[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/SceneScripts/DraftSolomon.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UI/SettingsPage.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/CardDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/DeckDisplayX.tscn" type="PackedScene" id=6]

[node name="Draft" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -892.591, -238.211 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 76.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 104.0
margin_right = 152.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendButton" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -275.0
margin_top = 64.0
margin_right = -96.0
margin_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Finished Splitting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckDisplayControl" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeckDisplay" parent="DeckDisplayControl" instance=ExtResource( 6 )]
position = Vector2( -120, 123 )

[node name="BoosterDisplay" parent="." instance=ExtResource( 5 )]
margin_left = -84.0
margin_top = -182.0
margin_right = -44.0
margin_bottom = -142.0
viewMul = 0.5
z_index = 2

[node name="Button" type="Button" parent="BoosterDisplay"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 266.0
margin_top = -12.5
margin_right = 382.0
margin_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Take Stack"

[node name="BoosterDisplay2" parent="." instance=ExtResource( 5 )]
margin_left = -84.0
margin_right = -44.0
viewMul = 0.5
z_index = 2

[node name="Button" type="Button" parent="BoosterDisplay2"]
visible = false
margin_left = 286.0
margin_top = 7.5
margin_right = 402.0
margin_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Take Stack"

[node name="CardDisplay" parent="." instance=ExtResource( 5 )]
margin_left = -84.0
margin_top = 144.0
margin_right = -44.0
margin_bottom = 184.0
viewMul = 0.5
z_index = 2

[node name="BoosterNum" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.5
margin_top = 220.0
margin_right = -36.5
margin_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pack: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerState" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -391.5
margin_top = 220.0
margin_right = -336.5
margin_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentState" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 208.5
margin_top = 220.0
margin_right = 263.5
margin_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsHolder" type="Node2D" parent="."]
z_index = 101

[node name="SettingsPage" parent="SettingsHolder" instance=ExtResource( 3 )]
visible = false
margin_left = 313.519
margin_top = 108.173
margin_right = 743.519
margin_bottom = 461.173

[connection signal="pressed" from="QuitButton" to="." method="onQuitButtonPressed"]
[connection signal="pressed" from="SettingsButton" to="." method="onSettingsPressed"]
[connection signal="pressed" from="SendButton" to="." method="sendCardsPressed"]
[connection signal="pressed" from="BoosterDisplay/Button" to="." method="takeCards1Pressed"]
[connection signal="pressed" from="BoosterDisplay2/Button" to="." method="takeCards2Pressed"]
